# CPE-Dilemme-du-prisonnier

./: .gitignore  CMakeLists.txt  Makefile  README.MD  build_unix.sh  build_unix_doc.sh  build_windows.bat  launch.sh  main  main.c
client/: CMakeLists.txt  RAPPORT.MD  README.MD  launch.sh  main.c
client/doc/: Doxyfile.in
client/headers/: affichage.h  board.h  client.h  joueur.h  lien.h
client/src/: affichage.c  board.c  client.c  communication.c  gui.c  lien.c
config/: rules_config.json  rules_config_temp.json  rules_pseudo  server_config.json
doc/: Doxyfile.in
doc/html/: annotated.html  classes.html  configurator_8h.html  configurator_8h_source.html  core_8h.html  core_8h_source.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_19baf89d9b4df24597ac323ebaaa5ebb.html  dir_29f78f7b83a9652e91505df6460802af.html  dir_2d6d95721cbcf5bd2380c22116073715.html  dir_2ea81a6337bc12e25c0aedf6b4c09389.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_327c428279599643710986f8d077ad62.html  dir_41feb2860e7e8b3e04e18eeef4739390.html  dir_47a94e81326ecafcf4c05ed4e4c17ed3.html  dir_4a478b3b1d073f22cafcf3d0bbdb5795.html  dir_4c91091b7aa997495744a945b041e59c.html  dir_4fb507ff317b0b39f9ea36a7cc942e8a.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5535cc774fdd7a444060ea2f4ad64138.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_5e44f741ef78961d5b384b3270a82363.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_78f7943ed3fe78fd894812f662da4111.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_874b25415967ffb81e3d534501b28fc5.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_973ef16e0fdb98666304996f704ccddc.html  dir_9fb077707694d20b7a13b312a4d64457.html  dir_a577b2e4acbf0750a76891912d9a4bb0.html  dir_a7d57661db69a764fe42ae1d6e0ab175.html  dir_a8569b198940721b2b4abca5dd7f076b.html  dir_ad9c8ef6ea60145de6c7db0776cbabd6.html  dir_b0ec30fc0c5ac0846d94e0c08741de79.html  dir_b7793f636623da15a1ec56286ab2c2b5.html  dir_bd36a8115b9e41621e8e7d4447019e35.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fab2d82383213251638f2037c490e50a.html  (+39 more)
doc/latex/: annotated.tex  configurator_8h.tex  configurator_8h_source.tex  core_8h.tex  core_8h_source.tex  files.tex  files__utils_8h_source.tex  index.tex  md__r_e_a_d_m_e.tex  read__rules_8c.tex  (+21 more)
glade/: #glade.glade#  glade.glade  glade.glade~
headers/: affichage.h  board.h  client.h  communication.h  configurator.h  connexion.h  gui.h  lien.h  outils.h  srvcxnmanager.h  string_utils.h  structures.h
output/: client  main  server
results/: results.csv
server/: .gitignore  README.MD  launch.sh
src/: affichage.c  board.c  client.c  commands.c  communication.c  communication_translater.c  configurator.c  connexion 3.c  connexion.c  gui.c  joueur.c  lien 2.c  lien.c  main  main.c  outils 3.c  outils.c  read_rules.c  srvcxnmanager.c
(+68 files in other folders)
